# kairos-rs

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Cargo.toml.old  Dockerfile  Dockerfile.chef  License  Makefile  POSTMAN_GUIDE.md  ROADMAP.md  Readme.md  build.sh  config.json  config.yml  config_advanced.json  config_ai_test.json  config_multi_protocol.json  dev.sh  docker-compose.yml  generate_jwt.py  llm.txt  mkdocs.yml  readme.md
.github/instructions/: *.instructions.md
.github/workflows/: deploy-docs.yml  docker-image.yml  docker-publish.yml  rust-clippy.yml
crates/kairos-cli/: Cargo.toml  README.md
crates/kairos-cli/src/: main.rs
crates/kairos-client/: Cargo.toml
crates/kairos-client/src/: lib.rs
crates/kairos-gateway/: Cargo.toml  README.md  config.json
crates/kairos-gateway/src/: main.rs
crates/kairos-rs/: Cargo.toml  Readme.md
crates/kairos-rs/src/: lib.rs
crates/kairos-rs/src/config/: hot_reload.rs  settings.rs  validation.rs
crates/kairos-rs/src/logs/: logger.rs  mod.rs
crates/kairos-rs/src/middleware/: auth.rs  mod.rs  rate_limit.rs  security.rs  transform.rs  validation.rs
crates/kairos-rs/src/models/: mod.rs  router.rs  settings.rs
crates/kairos-rs/src/routes/: auth_http.rs  config_reload.rs  dns.rs  ftp.rs  health.rs  http.rs  management.rs  metrics.rs  mod.rs  websocket.rs  websocket_admin.rs
crates/kairos-rs/src/services/: ai.rs  circuit_breaker.rs  dns.rs  ftp.rs  http.rs  load_balancer.rs  metrics_store.rs  mod.rs  websocket.rs  websocket_metrics.rs  websocket_placeholder.txt
crates/kairos-rs/src/utils/: mod.rs  path.rs  route_matcher.rs
crates/kairos-rs/tests/: ai_service_tests.rs  circuit_breaker_integration_test.rs  circuit_breaker_tests.rs  config_hot_reload_tests.rs  config_settings_tests.rs  config_validation_tests.rs  dns_tests.rs  ftp_tests.rs  integration_tests.rs  jwt_integration_test.rs  load_balancer_tests.rs  metrics_store_tests.rs  real_metrics_test.rs  route_matcher_tests.rs  simple_circuit_test.rs  simple_metrics_test.rs  transformation_tests.rs  websocket_metrics_tests.rs  websocket_tests.rs
crates/kairos-ui/: Cargo.toml  Cargo_old.toml  Dockerfile  IMPLEMENTATION.md  Leptos.toml  README.md  index.html  llm.txt  out.txt  output.txt  serve.py
crates/kairos-ui/assets/: styles.css
crates/kairos-ui/src/: app.rs  lib.rs  main.rs  styles.css
crates/kairos-ui/src/app/: components.rs  pages.rs  services.rs
crates/kairos-ui/src/components/: chart.rs  error_boundary.rs  header.rs  loading.rs  metric_card.rs  mod.rs  navbar.rs  real_time_metrics.rs  sidebar.rs  status_badge.rs
crates/kairos-ui/src/components/config/: ai_form.rs  cors_form.rs  jwt_form.rs  metrics_form.rs  mod.rs  rate_limit_form.rs  server_form.rs
crates/kairos-ui/src/models/: health.rs  metrics.rs  mod.rs  router.rs  settings.rs  transform.rs
crates/kairos-ui/src/pages/: config.rs  config_page.rs  config_page_old.rs  dashboard.rs  dashboard_simple.rs  health.rs  health_page.rs  metrics.rs  metrics_page.rs  mod.rs  profile_page.rs  routes.rs  routes_page.rs
crates/kairos-ui/src/server_functions/: api.rs  config.rs  health.rs  metrics.rs  mod.rs  routes.rs
crates/kairos-ui/src/services/: mod.rs
crates/kairos-ui/style/: main.scss
docs/: book.toml
docs/src/: AI_ROUTING_GUIDE.md  CONFIGURATION.md  EXAMPLES.md  GUIDES.md  POSTMAN_GUIDE.md  SUMMARY.md  UI_DASHBOARD.md  WEBSOCKET_GUIDE.md  WEBSOCKET_METRICS_GUIDE.md  index.md
examples/http_routing/: .gitignore  Dockerfile  README.md  compose.yml  config.json  requirements.txt
examples/http_routing/app/: __init__.py  views.py
examples/websocket_routing/: Dockerfile  README.md  bun.lockb  compose.yml  config.json  package.json
examples/websocket_routing/src/: index.ts  server.ts
realease/: RELEASE_NOTES_0.2.10.md  RELEASE_NOTES_0.2.11.md  RELEASE_NOTES_0.2.15.md  RELEASE_NOTES_0.2.17.md  RELEASE_NOTES_0.2.6.md  RELEASE_NOTES_0.2.8.md  RELEASE_NOTES_0.2.9.md
src/: error_handler.rs  lib.rs  main.rs  redirect_service.rs  yaml_config.rs
src/config/: hot_reload.rs  mod.rs  settings.rs  validation.rs
src/logs/: logger.rs  mod.rs  structured.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs  security.rs  validation.rs
src/models/: error.rs  http.rs  mod.rs  protocol.rs  router.rs  settings.rs
src/routes/: admin.rs  auth_http.rs  health.rs  http.rs  metrics.rs  mod.rs  websocket.rs
src/services/: circuit_breaker.rs  http.rs  mod.rs
src/utils/: mod.rs  path.rs  route_matcher.rs
tests/: circuit_breaker_integration_test.rs  config_hot_reload_tests.rs  config_settings_tests.rs  config_validation_tests.rs  integration_tests.rs  jwt_integration_test.rs  real_metrics_test.rs  route_matcher_tests.rs  simple_circuit_test.rs
