[package]
name = "kairos-rs"
version = "0.2.4"
edition = "2021"
description = "A Rust library for interacting with the Kairos Api Gateway"
license = "MIT"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = { version = "0.11", features = ["color"] }
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros", "signal"] }
thiserror = "1.0"
regex = { version = "1.11.2", features = ["std"], default-features = false }
# Performance and security dependencies
ahash = "0.8"
once_cell = "1.19"
uuid = { version = "1.0", features = ["v4", "serde"] }
actix-governor = "0.5"

