[package]
name = "kairos-cli"
version = "0.2.6"
edition = "2021"
description = "Command-line interface for Kairos API Gateway management"
license = "MIT"
authors = ["Daniel Sarmiento <josedanielsarmiento219@gmail.com>"]
repository = "https://github.com/DanielSarmiento04/kairos-rs"
keywords = ["api-gateway", "cli", "management", "configuration"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "kairos"
path = "src/main.rs"

[dependencies]
# Local dependencies
kairos-rs = { path = "../kairos-rs" }
kairos-client = { path = "../kairos-client" }

# Workspace dependencies
clap.workspace = true
console.workspace = true
indicatif.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
log.workspace = true
chrono.workspace = true

# CLI-specific dependencies
tabled = "0.15"
colored = "2.0"
dialoguer = "0.11"