[package]
name = "kairos-client"
version = "0.2.6"
edition = "2021"
description = "Client library for interacting with Kairos API Gateway"
license = "MIT"
authors = ["Daniel Sarmiento <daniel@example.com>"]
repository = "https://github.com/DanielSarmiento04/kairos-rs"
keywords = ["api-gateway", "client", "http", "websocket"]
categories = ["web-programming", "api-bindings"]

[lib]
name = "kairos_client"

[dependencies]
# Local dependencies
kairos-rs = { path = "../kairos-rs" }

# Workspace dependencies (with conditional compilation)
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
chrono.workspace = true
uuid.workspace = true

# HTTP client - compatible with both native and WASM
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }

# Native-only dependencies
tokio = { workspace = true, optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
futures-util = { version = "0.3", optional = true }
url = "2.5"

# WASM-only dependencies  
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true }
gloo-net = { version = "0.5", optional = true }

[features]
default = ["native"]
native = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys", "dep:gloo-net"]

[dev-dependencies]
tokio-test = "0.4"