[package]
name = "kairos-client"
version = "0.2.6"
edition = "2021"
description = "Client library for interacting with Kairos API Gateway"
license = "MIT"
authors = ["Daniel Sarmiento josedanielsarmiento219@gmail.com"]
repository = "https://github.com/DanielSarmiento04/kairos-rs"
keywords = ["api-gateway", "client", "http", "websocket"]
categories = ["web-programming", "api-bindings"]

[lib]
name = "kairos_client"

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
chrono.workspace = true
url = "2.5"

# UUID with conditional features
uuid = { workspace = true, features = ["js"] }

# Local dependencies - only needed for native builds (server-side deps)
kairos-rs = { path = "../kairos-rs", optional = true }

# HTTP client - native only (reqwest pulls in mio which doesn't support WASM)
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"], optional = true }

# Native-only dependencies
tokio = { workspace = true, optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
futures-util = { version = "0.3", optional = true }
rand = { version = "0.8", optional = true }

# WASM-only dependencies  
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true }
gloo-net = { version = "0.5", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = ["native"]
native = ["dep:kairos-rs", "dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:rand", "dep:reqwest"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys", "dep:gloo-net", "dep:js-sys"]

[dev-dependencies]
tokio-test = "0.4"