[package]
name = "kairos-gateway"
version = "0.3.0"
edition = "2021"
description = "High-performance HTTP API gateway built with Rust"
license = "MIT"
authors = ["Daniel Sarmiento <josedanielsarmiento219@gmail.com>"]
repository = "https://github.com/DanielSarmiento04/kairos-rs"
keywords = ["api-gateway", "proxy", "http", "server"]
categories = ["web-programming", "network-programming"]

[[bin]]
name = "kairos-gateway"
path = "src/main.rs"

[dependencies]
# Local dependencies
kairos-rs = { version = "0.3.0", path = "../kairos-rs" }

# Workspace dependencies
actix-web.workspace = true
actix-governor.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3.0"