[package]
name = "kairos-rs"
version = "0.2.7"
edition = "2021"
description = "A Rust library for interacting with the Kairos Api Gateway"
license = "MIT"
authors = ["Daniel Sarmiento <josedanielsarmiento219@gmail.com>"]
repository = "https://github.com/DanielSarmiento04/kairos-rs"
keywords = ["api-gateway", "proxy", "http", "middleware", "routing"]
categories = ["web-programming", "network-programming"]

[lib]
name = "kairos_rs"

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
thiserror.workspace = true
log.workspace = true
chrono.workspace = true
uuid.workspace = true
actix-web.workspace = true
actix-governor.workspace = true
regex.workspace = true
ahash.workspace = true
once_cell.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
futures-util.workspace = true
futures.workspace = true
env_logger.workspace = true

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"