[package]
name = "kairos-ui"
version = "0.2.6"
edition = "2021"
description = "Web-based admin UI for Kairos API Gateway built with Leptos"
license = "MIT"
authors = ["Daniel Sarmiento <daniel@example.com>"]
repository = "https://github.com/DanielSarmiento04/kairos-rs"
keywords = ["api-gateway", "ui", "web", "leptos", "admin"]
categories = ["web-programming", "gui"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "kairos-ui"
path = "src/main.rs"
required-features = ["ssr"]

[dependencies]
# Local dependencies
kairos-rs = { path = "../kairos-rs" }
kairos-client = { path = "../kairos-client" }

# Leptos dependencies
leptos = { workspace = true, features = ["csr"] }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos_axum = { workspace = true, optional = true }

# Workspace dependencies  
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
thiserror.workspace = true
log.workspace = true
chrono.workspace = true

# UI-specific dependencies
wasm-bindgen = "0.2"
web-sys = "0.3"
gloo-net = "0.5"
plotters = "0.3"
plotters-canvas = "0.3"

# SSR dependencies (optional)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }

[features]
default = ["csr"]
csr = ["leptos/csr"]
ssr = [
    "dep:axum",
    "dep:tower", 
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
# The name of the binary target to run when using `cargo leptos serve`
bin-features = ["ssr"]

# The features to use when building the lib target
lib-features = ["csr"]

# The site root folder 
site-root = "target/site"

# The site package directory
site-pkg-dir = "pkg"

# Assets source directory
assets-dir = "assets"

# The IP and port where the server serves the content
site-addr = "127.0.0.1:3000"

# The port number to use for automatic reloading when developing
reload-port = 3001

# The browserlist query to use for optimizing CSS
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool
watch = false

# Environment variables
env = "DEV"

# Output formats for CSS
output-name = "kairos-ui"